# systemMonitor

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
app/: config.py  csv_logger.py  status.py  tcp_server.py  web_server.py
scripts/: build_binary.py
