[project]
name = "systemmonitor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.136.1",
    "psutil>=7.2.2",
    "pyarmor>=9.2.4",
    "pyinstaller>=6.20.0",
    "python-dotenv>=1.2.2",
    "uvicorn>=0.47.0",
]
